python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd


    int SdifUpdateFrameHeader (SdifFileT *SdifF, 
                                        size_t ChunkSize, 
                                        SdifInt4 NumMatrix)
    ## 
    # /*DOC:
    #   Write a whole frame containing one matrix: 
    #   frame header, matrix header, matrix data, and padding.
    #   Data points to NbRow * NbCol * SdifSizeofDataType (DataType) bytes in
    #   row-major order. 
    # 
    #   This function has the big advantage that the frame size is known in
    #   advance, so there's no need to rewind and update after the matrix
    #   has been written.  */
    # size_t SdifFWriteFrameAndOneMatrix (SdifFileT     *SdifF,
    #                                              SdifSignature  FrameSignature,
    #                                              SdifUInt4      NumID,
    #                                              SdifFloat8     Time,
    #                                              SdifSignature  MatrixSignature,
    #                                              SdifDataTypeET DataType,
    #                                              SdifUInt4      NbRow,
    #                                              SdifUInt4      NbCol,
    #                                              void          *Data);
    # 
    size_t SdifFWriteFrameAndOneMatrix (SdifFileT     *SdifF,
                                              SdifSignature  FrameSignature,
                                              SdifUInt4      NumID,
                                              SdifFloat8     Time,
                                              SdifSignature  MatrixSignature,
                                              SdifDataTypeET DataType,
                                              SdifUInt4      NbRow,
                                              SdifUInt4      NbCol,
                                              void          *Data)
    #
    # 
    # /*DOC:
    #   Return (constant) size of frame header after signature and size field. 
    #   Use this to calculate the Size argument for SdifFSetCurrFrameHeader. */
    # size_t SdifSizeOfFrameHeader (void);
    size_t SdifSizeOfFrameHeader ()
    # 
    # /*DOC:
    #   Return size of matrix (header, data, padding).
    #   Use this to calculate the Size argument for SdifFSetCurrFrameHeader. */
    # size_t SdifSizeOfMatrix (SdifDataTypeET DataType,
    #                                   SdifUInt4      NbRow,
    #                                   SdifUInt4      NbCol);
    size_t SdifSizeOfMatrix (SdifDataTypeET DataType,
                                   SdifUInt4      NbRow,
                                   SdifUInt4      NbCol)
    #

    # 
    # /*DOC:
    #   Write a text matrix using a string.
    #   Return number of bytes written.
    # */
    # size_t SdifFWriteTextFrame(SdifFileT     *SdifF,
    #                                     SdifSignature FrameSignature,
    #                                     SdifUInt4     NumID,
    #                                     SdifFloat8    Time,
    #                                     SdifSignature MatrixSignature,
    #                                     char          *str,
    #                                     size_t        length);
    # 
    size_t SdifFWriteTextFrame(SdifFileT     *SdifF,
                                     SdifSignature FrameSignature,
                                     SdifUInt4     NumID,
                                     SdifFloat8    Time,
                                     SdifSignature MatrixSignature,
                                     char          *str,
                                     size_t        length)

    #
    # /*DOC:
    #   Write a text matrix using a SdifString.
    #   Return number of bytes written.
    # */
    # size_t SdifFWriteTextFrameSdifString(SdifFileT     *SdifF,
    #                                               SdifSignature FrameSignature,
    #                                               SdifUInt4     NumID,
    #                                               SdifFloat8    Time,
    #                                               SdifSignature MatrixSignature,
    #                                               SdifStringT   *SdifString);
    # 
    size_t SdifFWriteTextFrameSdifString(SdifFileT     *SdifF,
                                               SdifSignature FrameSignature,
                                               SdifUInt4     NumID,
                                               SdifFloat8    Time,
                                               SdifSignature MatrixSignature,
                                               SdifStringT   *SdifString)



    # 
    # /*
    # // FUNCTION GROUP:      Opening and Closing of Files
    # */
    # 
    # /*DOC:
    #  */
    # SdifFileT* SdifFOpen                   (const_char_ptr Name, SdifFileModeET Mode);
    SdifFileT* SdifFOpen (const_char_ptr Name, SdifFileModeET Mode)
    # 
    # SdifFileT*         SdifFOpenText                (SdifFileT *SdifF, const char* Name, SdifFileModeET Mode);
    SdifFileT* SdifFOpenText (SdifFileT *SdifF, const_char_ptr Name, SdifFileModeET Mode)
    
    # 
    # /*DOC:
    #  */
    # void      SdifFClose                   (SdifFileT *SdifF);
    void SdifFClose (SdifFileT *SdifF)
    # 
    # SdifFrameHeaderT*  SdifFCreateCurrFramH         (SdifFileT *SdifF, SdifSignature Signature);
    # SdifMatrixHeaderT* SdifFCreateCurrMtrxH         (SdifFileT *SdifF);
    # FILE*              SdifFGetFILE_SwitchVerbose   (SdifFileT *SdifF, int Verbose);
    # void               SdifTakeCodedPredefinedTypes (SdifFileT *SdifF);
    # void               SdifFLoadPredefinedTypes     (SdifFileT *SdifF, const_char_ptr TypesFileName);
    # 
    SdifFrameHeaderT*  SdifFCreateCurrFramH         (SdifFileT *SdifF, SdifSignature Signature)
    SdifMatrixHeaderT* SdifFCreateCurrMtrxH         (SdifFileT *SdifF)
    FILE*              SdifFGetFILE_SwitchVerbose   (SdifFileT *SdifF, int Verbose)
    void               SdifTakeCodedPredefinedTypes (SdifFileT *SdifF)
    void               SdifFLoadPredefinedTypes     (SdifFileT *SdifF, const_char_ptr TypesFileName)
    #
    # extern int        gSdifInitialised;
    # extern SdifFileT *gSdifPredefinedTypes;
    # 
    int        gSdifInitialised
    SdifFileT *gSdifPredefinedTypes
    # 
    # 
    # /*
    # // FUNCTION GROUP:      Init/Deinit of the Library
    # */
    # (
    # /*DOC: 
    #   Initialise the SDIF library, providing a name for an optional additional
    #   file with type definitions or "".
    #   <b>This function has to be called once and only once per process 
    #   before any other call to the SDIF library.</b> */
    # void SdifGenInit (const_char_ptr PredefinedTypesFile); 
    void SdifGenInit (const_char_ptr PredefinedTypesFile)
    # 
    # /*DOC:
    #   Initialise the SDIF library if it has not been initialised before.
    #   This function has to be called at least once, but can be called as
    #   many times as desired.  Especially useful for dynamic libraries.
    # 
    #   [in] PredefinedTypesFile:
    #         name for an optional additional file with type definitions or "". */
    # void SdifGenInitCond (const_char_ptr PredefinedTypesFile);
    void SdifGenInitCond (const_char_ptr PredefinedTypesFile)
    # 
    # /*DOC:
    #   Deinitialise the SDIF library */
    # void SdifGenKill (void); 
    void SdifGenKill ()
    # 
    # /*DOC:
    #   Set function that will be called after a grave error has occurred.  
    #   Default is exit(). */
    # void SdifSetExitFunc (SdifExitFuncT func);
    void SdifSetExitFunc (SdifExitFuncT func)
    # 
    # /*DOC:
    #   Set function that will be called after an error has occured.
    #   make an exception. */
    # void SdifSetErrorFunc (SdifExceptionFuncT func);
    void SdifSetErrorFunc (SdifExceptionFuncT func)
    # 
    # /*DOC:
    #   Set function that will be called after a warning has occured.
    #   make an exception. */
    # void SdifSetWarningFunc (SdifExceptionFuncT func);
    void SdifSetWarningFunc (SdifExceptionFuncT func)
    # 
    # /*DOC:
    #   Print version information to standard error. */
    # void SdifPrintVersion(void);
    void SdifPrintVersion()
    # 
    # 
    # /*
    # // FUNCTION GROUP:      Current Header Access Functions
    # */
    # 
    # /*DOC: 
    #   Permet de donner des valeurs a chaque champ de l'entete de frame
    #   temporaire de SdifF.<p> 
    # 
    #   Exemple:
    #   <code>SdifSetCurrFrameHeader(SdifF, '1FOB', _SdifUnknownSize, 3, streamid, 1.0);</code> */
    # SdifFrameHeaderT* SdifFSetCurrFrameHeader (SdifFileT *SdifF, 
    #                                                     SdifSignature Signature, 
    #                                                     SdifUInt4 Size,
    #                                                     SdifUInt4 NbMatrix, 
    #                                                     SdifUInt4 NumID, 
    #                                                     SdifFloat8 Time);
    # 
    SdifFrameHeaderT* SdifFSetCurrFrameHeader (SdifFileT *SdifF, 
                                                     SdifSignature Signature, 
                                                     SdifUInt4 Size,
                                                     SdifUInt4 NbMatrix, 
                                                     SdifUInt4 NumID, 
                                                     SdifFloat8 Time)

    # /*DOC: 
    #   Permet de donner des valeurs a chaque champ de l'entete de matice
    #   temporaire de SdifF.<p>
    # 
    #   Exemple:
    #   <code>SdifSetCurrMatrixHeader(SdifF, '1FOF', eFloat4, NbFofs, 7);</code> */
    # SdifMatrixHeaderT* SdifFSetCurrMatrixHeader (SdifFileT *SdifF, 
    #                                                       SdifSignature Signature,
    #                                                       SdifDataTypeET DataType, 
    #                                                       SdifUInt4 NbRow, 
    #                                                       SdifUInt4 NbCol);
    SdifMatrixHeaderT* SdifFSetCurrMatrixHeader (SdifFileT *SdifF, 
                                                       SdifSignature Signature,
                                                       SdifDataTypeET DataType, 
                                                       SdifUInt4 NbRow, 
                                                       SdifUInt4 NbCol)
